--- a/Ejercicio2/styles/style.css
+++ b/Ejercicio2/styles/style.css
@@ -48,16 +48,85 @@
     background: #43A047;
 }
 
-.form .message {
+.form .message1 {
     margin: 15px 0 0;
     color: #b3b3b3;
     font-size: 12px;
+}
+
+
+.form .message1 a {
+    color: #4CAF50;
+    text-decoration: none;
+}
+
+.form .message2 {
+    margin: 15px 0 0;
+    color: #b3b3b3;
+    font-size: 12px;
+}
+
+
+.form .message2 a {
+    color: #4CAF50;
+    text-decoration: none;
+}
+
+.form .register-form {
+    display: none;
+}
+
+.container {
+    position: relative;
+    z-index: 1;
+    max-width: 300px;
+    margin: 0 auto;
+}
+
+.container:before, .container:after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+.container .info {
+    margin: 50px auto;
+    text-align: center;
+}
+
+.container .info h1 {
+    margin: 0 0 15px;
+    padding: 0;
+    font-size: 36px;
+    font-weight: 300;
+    color: #1a1a1a;
+}
+
+.container .info span {
+    color: #4d4d4d;
+    font-size: 12px;
+}
+
+.container .info span a {
+    color: #000000;
+    text-decoration: none;
+}
+
+.container .info span .fa {
+    color: #EF3B3A;
 }
 
 .alert {
     margin: 15px;
     padding: 10px;
     background: red;
+    color: #fff;
+}
+
+.success {
+    margin: 15px;
+    padding: 10px;
+    background: green;
     color: #fff;
 }
 
